Made sidebar 1% wider to avoid scrollbar messing with buttons

--- a/resources/sass/calendar/_variables-dark.scss
+++ b/resources/sass/calendar/_variables-dark.scss
@@ -27,7 +27,7 @@ $accent-color: #2f855a;
 $accent-color-darker: #246645;
 $accent-color-light: $accent-color;
 $accent-color-light: #2f855a;
-$sidebar-width: 27%;
+$sidebar-width: 28%;
 $wiki-link-color: rgba(255,255,255,0.2);
 $wiki-link-hover-color: white;
 $main-text-color: rgba(255, 255, 255, 0.8);
